<?xml version="1.0"?>
<package>
  <name>neo_startracker</name>
  <version>0.0.1</version>
  <description>Communication Node for Mo-Sys-Startracker</description>

  <maintainer email="ros@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">http://www.neobotix-robots.com</url>
  <author>Jan-Niklas Nieland</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
